--- a/projectCfg/project.properties
+++ b/projectCfg/project.properties
@@ -1,175 +1,191 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Fri Oct 03 19:54:01 ART 2025
-#Fri Oct 03 19:54:01 ART 2025
-cltFuelCorrCurveDialogWarmup\ enrichment_Y=113
-pedalSensorAccelerator\ pedal_Y=96
-cltFuelCorrCurveDialogWarmup\ enrichment_X=430
-pedalSensorAccelerator\ pedal_X=996
-idleSettingsIdle\ settings_X=753
-rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_height=245
-triggerConfigurationTrigger_height=606
-crankingTpsCurveCranking\ TPS\ Multiplier_height=452
-IgnitionTableDialogIgnition\ advance_height=473
-idleSettingsIdle\ settings_Y=53
-outputsDialogOutputs_X=275
-idleSettingsIdle\ settings_width=413
-tpsSensorTPS_width=556
-canReWidebandToolsrusEFI\ Wideband\ Tools_height=844
-outputsDialogOutputs_Y=187
-VeAnalyzeConsole.veTableTbl_selectedDash=Standard
-ecuStimulatorECU\ stimulator_Y=213
-ecuStimulatorECU\ stimulator_X=635
-outputsDialogOutputs_height=675
-CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
-dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_width=307
-triggerConfigurationTrigger_width=1142
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
-cylinderBankSelectCylinder\ Banks_width=276
-WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
-mc33DialogLow-Z\ smart\ injector\ control_Y=247
-mc33DialogLow-Z\ smart\ injector\ control_X=794
-postCrankingEnrichmentTblAfter\ start\ enrichment_height=277
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
-sdCardSD\ Card_height=865
-ignitionCltCorrTableWarmup\ timing\ correction_X=822
-stagedInjectionStaged\ injection_height=384
-canReWidebandToolsrusEFI\ Wideband\ Tools_width=483
-ignitionCltCorrTableWarmup\ timing\ correction_Y=394
-pedalSensorAccelerator\ pedal_width=625
-sdCardSD\ Card_Y=92
-postCrankingEnrichmentTblAfter\ start\ enrichment_X=822
-postCrankingEnrichmentTblAfter\ start\ enrichment_Y=386
-dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_Y=422
-sdCardSD\ Card_X=778
-dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_X=806
-crankingTpsCurveCranking\ TPS\ Multiplier_X=653
-crankingTpsCurveCranking\ TPS\ Multiplier_Y=298
-crankingDialogCranking\ Settings_height=466
-mc33DialogLow-Z\ smart\ injector\ control_width=332
-engineCharsVehicle\ Information_width=391
-useCommonTuneViewDir=false
-triggerConfigurationTrigger_Y=221
-AccelEnrichAccel/Decel\ Enrichment_height=531
-stagedInjectionStaged\ injection_width=490
-ecuUid=c043081c-c3a4-485c-850f-8222df09bf2e
-cylinderBankSelectCylinder\ Banks_height=433
-ignitionCltCorrTableWarmup\ timing\ correction_height=261
-triggerConfigurationTrigger_X=389
-primingFuelPulsePanelPriming\ fuel\ pulse_height=502
-etbDialogElectronic\ Throttle\ Body_width=793
-crankingTpsCurveCranking\ TPS\ Multiplier_width=614
-injTestInjector\ test_height=477
-dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_width=306
-fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_width=1120
-cltFuelCorrCurveDialogWarmup\ enrichment_width=619
-outputsDialogOutputs_width=1370
-injectionSettingsInjection\ hardware_X=636
+#Last Saved on: Sat Oct 04 22:28:22 ART 2025
+#Sat Oct 04 22:28:22 ART 2025
+lastDisplayedTuneFile=Modified - TU5JP 1.6 8v_generated_20251003224320.msq
 multisparkSettingsMultispark_Y=324
-injectionSettingsInjection\ hardware_Y=196
+dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_height=223
 multisparkSettingsMultispark_X=719
+crankingTpsCurveCranking\ TPS\ Multiplier_width=614
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+cylinderBankSelectCylinder\ Banks_Y=308
+cylinderBankSelectCylinder\ Banks_X=822
+vrThresholdSettings_Y=353
+vrThresholdSettings_X=773
+WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
+cltIdleRPMCurveIdle\ Target\ RPM_height=581
+idleSettingsIdle\ settings_height=887
+multisparkSettingsMultispark_height=401
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_width=396
 AccelEnrichAccel/Decel\ Enrichment_Y=259
-CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
-engineCharsVehicle\ Information_height=453
-cltIdleRPMCurveIdle\ Target\ RPM_width=610
-fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_Y=127
-fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_X=400
-CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
-ignitionSettingsIgnition\ settings_X=529
 AccelEnrichAccel/Decel\ Enrichment_X=777
-tpsSensorTPS_Y=61
-lastDisplayedTuneFile=TU5JP 1.6 8v_generated_20251003224320.msq
-ignitionSettingsIgnition\ settings_height=507
-cltFuelCorrCurveDialogWarmup\ enrichment_height=643
+ecuStimulatorECU\ stimulator_height=611
 injectorConfigInjection\ configuration_Y=322
 injectorConfigInjection\ configuration_X=961
-crankingDialogCranking\ Settings_width=412
+pedalSensorAccelerator\ pedal_width=625
+stagedInjectionStaged\ injection_height=384
+injTestInjector\ test_height=477
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
-injectorConfigInjection\ configuration_width=439
+etbDialogElectronic\ Throttle\ Body_height=771
 CommSettingBaud\ Rate=115200
-injectionSettingsInjection\ hardware_width=648
-idlehwIdle\ hardware_width=584
+ignitionSettingsIgnition\ settings_width=841
+cltFuelCorrCurveDialogWarmup\ enrichment_width=619
+canReWidebandToolsrusEFI\ Wideband\ Tools_width=483
+etbDialogElectronic\ Throttle\ Body_Y=139
+mc33DialogLow-Z\ smart\ injector\ control_width=332
+injectionSettingsInjection\ hardware_Y=196
+etbDialogElectronic\ Throttle\ Body_X=563
+injectionSettingsInjection\ hardware_X=636
+CommSettingCom\ Port=
+CommSettingDESKTOP-1J48FJ4CommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+primingFuelPulsePanelPriming\ fuel\ pulse_height=502
+vrThresholdSettings_width=374
+idlehwIdle\ hardware_height=983
+vrThresholdSettings_height=343
+etbDialogElectronic\ Throttle\ Body_width=793
+WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
+cltIdleRPMCurveIdle\ Target\ RPM_width=610
+acPressureSensorSettings_height=438
+outputsDialogOutputs_width=1370
+idleSettingsIdle\ settings_width=414
+acSettingsAir\ Conditioning_height=471
+outputsDialogOutputs_height=675
+cylinderBankSelectCylinder\ Banks_width=276
+cltIdleRPMCurveIdle\ Target\ RPM_Y=234
+cltIdleRPMCurveIdle\ Target\ RPM_X=655
+injTestInjector\ test_width=375
+CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
+dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_width=251
+tuneFileDir=/home/fdsoftware/M\u00FAsica
+primingFuelPulsePanelPriming\ fuel\ pulse_width=627
+tpsSensorTPS_width=556
+injectionSettingsInjection\ hardware_width=631
+selectedComDriver=Multi Interface MegaSquirt Driver
+CommSettingDESKTOP-1J48FJ4CommDriver.controllerInterfaceId=RS232 Serial Interface
+dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_height=453
 IgnitionTableDialogIgnition\ advance_width=553
-Triggers.ActiveTriggers=TriggeredPage 1 Refresh\:  triggerPageRefreshFlag |TriggeredPage 3 Refresh\:  ltftPageRefreshFlag |
-crankingDialogCranking\ Settings_X=754
-postCrankingEnrichmentTblAfter\ start\ enrichment_width=276
-crankingDialogCranking\ Settings_Y=291
-ecuStimulatorECU\ stimulator_height=611
-useCommonDashboardDir=false
-veTableDialogVE_height=591
-injectorConfigInjection\ configuration_height=651
+injectorConfigInjection\ configuration_width=439
+veTableDialogVE_Y=229
+veTableDialogVE_X=683
+engineCharsVehicle\ Information_Y=298
+engineCharsVehicle\ Information_X=764
 ecuConfigFile=mainController.ini
-tpsSensorTPS_X=347
+rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_width=276
+injectionSettingsInjection\ hardware_height=573
+ecuUid=c043081c-c3a4-485c-850f-8222df09bf2e
+pedalSensorAccelerator\ pedal_Y=96
+pedalSensorAccelerator\ pedal_X=996
+analogInputSettingsAnalog\ Input\ Settings_Y=369
+analogInputSettingsAnalog\ Input\ Settings_X=604
+engineCharsVehicle\ Information_width=391
+injectorConfigInjection\ configuration_height=651
+sdCardSD\ Card_width=364
+idlehwIdle\ hardware_width=596
+fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_Y=127
+fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_X=400
+CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
+CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
+postCrankingEnrichmentTblAfter\ start\ enrichment_Y=386
+mc33DialogLow-Z\ smart\ injector\ control_Y=247
+postCrankingEnrichmentTblAfter\ start\ enrichment_X=822
+mc33DialogLow-Z\ smart\ injector\ control_X=794
+ignitionSettingsIgnition\ settings_Y=271
+cylinderBankSelectCylinder\ Banks_height=433
+ignitionSettingsIgnition\ settings_X=529
+veTableDialogVE_width=553
+acPressureSensorSettings_width=429
+outputsDialogOutputs_Y=187
+outputsDialogOutputs_X=275
+multisparkSettingsMultispark_width=482
+ignitionCltCorrTableWarmup\ timing\ correction_height=261
+CommSettingdiego-pcCommDriver.controllerInterfaceId=RS232 Serial Interface
+cltFuelCorrCurveDialogWarmup\ enrichment_height=643
+ignitionCltCorrTableWarmup\ timing\ correction_width=276
+acSettingsAir\ Conditioning_width=698
+ecuStimulatorECU\ stimulator_width=521
+cltFuelCorrCurveDialogWarmup\ enrichment_Y=113
+cltFuelCorrCurveDialogWarmup\ enrichment_X=430
+Triggers.ActiveTriggers=TriggeredPage 1 Refresh\:  triggerPageRefreshFlag |TriggeredPage 3 Refresh\:  ltftPageRefreshFlag |
+CommSettingDESKTOP-1J48FJ4CommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
+triggerConfigurationTrigger_Y=221
+AccelEnrichAccel/Decel\ Enrichment_width=365
+triggerConfigurationTrigger_X=349
+triggerConfigurationTrigger_width=1155
+postCrankingEnrichmentTblAfter\ start\ enrichment_width=276
+crankingDialogCranking\ Settings_height=466
+mc33DialogLow-Z\ smart\ injector\ control_height=554
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_height=428
+CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
+engineCharsVehicle\ Information_height=453
+analogInputSettingsAnalog\ Input\ Settings_width=295
+tpsSensorTPS_height=891
+dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_Y=422
+dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_X=806
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_Y=167
+idleSettingsIdle\ settings_Y=53
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_X=377
+idleSettingsIdle\ settings_X=753
+ecuStimulatorECU\ stimulator_Y=213
+ecuStimulatorECU\ stimulator_X=635
+CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+crankingDialogCranking\ Settings_width=412
+fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_width=1120
+rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_height=245
+sdCardSD\ Card_height=865
+CommSettingdiego-pcCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
+ignitionSettingsIgnition\ settings_height=521
+acSettingsAir\ Conditioning_Y=242
+stagedInjectionStaged\ injection_Y=332
+acSettingsAir\ Conditioning_X=403
+stagedInjectionStaged\ injection_X=715
+dashBoardFile=/dashboard//dashboard.dash
+dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_Y=302
+dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_X=807
 injTestInjector\ test_Y=286
 injTestInjector\ test_X=772
-injTestInjector\ test_width=375
-ignitionSettingsIgnition\ settings_Y=271
-CommSettingdiego-pcCommDriver.controllerInterfaceId=RS232 Serial Interface
-cltIdleRPMCurveIdle\ Target\ RPM_height=581
-dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_height=205
-rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_width=276
+ecuSettings=AFR|
+acPressureSensorSettings_Y=258
+acPressureSensorSettings_X=537
+triggerConfigurationTrigger_height=597
+AccelEnrichAccel/Decel\ Enrichment_height=531
+useCommonTuneViewDir=false
+projectDescription=
+canReWidebandToolsrusEFI\ Wideband\ Tools_height=844
+stagedInjectionStaged\ injection_width=490
+firmwareDescription=rusEFI v20251003@1431655765
+veTableDialogVE_height=591
+dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_width=261
+IgnitionTableDialogIgnition\ advance_Y=288
+VeAnalyzeConsole.veTableTbl_selectedDash=Standard
+useCommonDashboardDir=false
+idlehwIdle\ hardware_Y=0
+IgnitionTableDialogIgnition\ advance_X=683
+idlehwIdle\ hardware_X=405
+canReWidebandToolsrusEFI\ Wideband\ Tools_Y=102
+canReWidebandToolsrusEFI\ Wideband\ Tools_X=718
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=COM6
+rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_Y=402
+tpsSensorTPS_Y=61
+rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_X=822
+tpsSensorTPS_X=347
+crankingTpsCurveCranking\ TPS\ Multiplier_height=452
+pedalSensorAccelerator\ pedal_height=613
+CommSettingDESKTOP-1J48FJ4CommDriver.RS232\ Serial\ InterfaceCom\ Port=COM6
+fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_height=795
+crankingDialogCranking\ Settings_Y=291
+postCrankingEnrichmentTblAfter\ start\ enrichment_height=277
+crankingDialogCranking\ Settings_X=754
+sdCardSD\ Card_Y=92
+sdCardSD\ Card_X=778
+canId=-1
+commPort=
 primingFuelPulsePanelPriming\ fuel\ pulse_Y=273
 primingFuelPulsePanelPriming\ fuel\ pulse_X=646
-ecuSettings=AFR|
-rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_X=822
-rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_Y=402
-cylinderBankSelectCylinder\ Banks_X=822
-engineCharsVehicle\ Information_Y=298
-cltIdleRPMCurveIdle\ Target\ RPM_Y=234
-commPort=
-cylinderBankSelectCylinder\ Banks_Y=308
-engineCharsVehicle\ Information_X=764
-cltIdleRPMCurveIdle\ Target\ RPM_X=655
-etbDialogElectronic\ Throttle\ Body_Y=139
-etbDialogElectronic\ Throttle\ Body_X=563
-IgnitionTableDialogIgnition\ advance_X=683
-veTableDialogVE_Y=229
-canId=-1
-IgnitionTableDialogIgnition\ advance_Y=288
-dashBoardFile=/dashboard//dashboard.dash
 baudRate=115200
-CommSettingdiego-pcCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
-pedalSensorAccelerator\ pedal_height=613
-veTableDialogVE_X=683
-veTableDialogVE_width=553
-selectedComDriver=Multi Interface MegaSquirt Driver
-ecuStimulatorECU\ stimulator_width=521
-idlehwIdle\ hardware_height=1050
-projectName=Peugeot206
-tpsSensorTPS_height=891
-multisparkSettingsMultispark_height=401
-AccelEnrichAccel/Decel\ Enrichment_width=365
-ignitionSettingsIgnition\ settings_width=862
-ignitionCltCorrTableWarmup\ timing\ correction_width=276
-vrThresholdSettings_width=374
-multisparkSettingsMultispark_width=482
-CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
-idleTimingPidCorrDialogClosed-loop\ idle\ timing_height=428
-firmwareDescription=rusEFI v20251003@1431655765
-mc33DialogLow-Z\ smart\ injector\ control_height=554
-CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
-sdCardSD\ Card_width=364
-injectionSettingsInjection\ hardware_height=657
-idlehwIdle\ hardware_Y=0
-idlehwIdle\ hardware_X=668
-CommSettingCom\ Port=
-idleSettingsIdle\ settings_height=943
-idleTimingPidCorrDialogClosed-loop\ idle\ timing_width=396
-fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_height=795
-vrThresholdSettings_X=773
-vrThresholdSettings_Y=353
-canReWidebandToolsrusEFI\ Wideband\ Tools_X=718
-canReWidebandToolsrusEFI\ Wideband\ Tools_Y=102
-tuneFileDir=/home/fdsoftware/M\u00FAsica
-vrThresholdSettings_height=343
-idleTimingPidCorrDialogClosed-loop\ idle\ timing_X=377
-stagedInjectionStaged\ injection_X=715
-primingFuelPulsePanelPriming\ fuel\ pulse_width=627
-WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
-dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_Y=302
-idleTimingPidCorrDialogClosed-loop\ idle\ timing_Y=167
-dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_X=807
-projectDescription=
-dcMotorActuatorHwDC\ motor\ actuator(s)\ hardware_height=445
-stagedInjectionStaged\ injection_Y=332
-etbDialogElectronic\ Throttle\ Body_height=771
+analogInputSettingsAnalog\ Input\ Settings_height=216
+ignitionCltCorrTableWarmup\ timing\ correction_Y=394
+ignitionCltCorrTableWarmup\ timing\ correction_X=822
+IgnitionTableDialogIgnition\ advance_height=473
+crankingTpsCurveCranking\ TPS\ Multiplier_Y=298
+projectName=Peugeot_206_rusefi
+crankingTpsCurveCranking\ TPS\ Multiplier_X=653
