--- a/projectCfg/project.properties
+++ b/projectCfg/project.properties
@@ -1,7 +1,7 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sun Oct 05 00:09:53 ART 2025
-#Sun Oct 05 00:09:53 ART 2025
+#Last Saved on: Wed Oct 08 01:30:01 ART 2025
+#Wed Oct 08 01:30:01 ART 2025
 idleAdvanceCurveIdle\ Advance\ Angle_Y=266
 cltFuelCorrCurveDialogWarmup\ enrichment_Y=113
 cltFuelCorrCurveDialogWarmup\ enrichment_X=430
@@ -12,13 +12,14 @@ IgnitionTableDialogIgnition\ advance_height=473
 idleSettingsIdle\ settings_width=413
 outputsDialogOutputs_X=201
 canReWidebandToolsrusEFI\ Wideband\ Tools_height=844
+smLaunchControlLaunch\ Control_height=680
 outputsDialogOutputs_Y=175
 VeAnalyzeConsole.veTableTbl_selectedDash=Standard
 otherSensorInputsOther\ Sensor\ Inputs_height=396
-outputsDialogOutputs_height=675
 CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+outputsDialogOutputs_height=675
 triggerConfigurationTrigger_width=1142
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM1
 ignitionInputDialogIgnition\ key\ input\ Settings_X=778
 ignitionInputDialogIgnition\ key\ input\ Settings_Y=440
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
@@ -29,8 +30,11 @@ acPressureSensorSettings_X=537
 sdCardSD\ Card_Y=92
 acPressureSensorSettings_Y=258
 dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_Y=391
-dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_X=1182
 sdCardSD\ Card_X=778
+dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_X=1182
+baroCorrTblBaro\ Correction_width=276
+tChargeSettingsEstimated\ cylinder\ air\ temperature_Y=43
+tChargeSettingsEstimated\ cylinder\ air\ temperature_X=648
 ioTestBench\ Test\ &\ Commands_Y=193
 ioTestBench\ Test\ &\ Commands_X=571
 mc33DialogLow-Z\ smart\ injector\ control_width=332
@@ -55,7 +59,9 @@ AccelEnrichAccel/Decel\ Enrichment_Y=259
 engineCharsVehicle\ Information_height=453
 CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 ignitionSettingsIgnition\ settings_X=529
+monitoringSettingsrusEFI\ Console\ Settings_Y=434
 allPins1All\ IO\ 1/3_Y=194
+monitoringSettingsrusEFI\ Console\ Settings_X=812
 AccelEnrichAccel/Decel\ Enrichment_X=777
 allPins1All\ IO\ 1/3_X=348
 tpsSensorTPS_Y=61
@@ -89,6 +95,7 @@ cylinderBankSelectCylinder\ Banks_X=822
 cltIdleRPMCurveIdle\ Target\ RPM_X=596
 cylinderBankSelectCylinder\ Banks_Y=308
 idleAdvanceCurveIdle\ Advance\ Angle_height=452
+predictiveMapBlendDurationPredictive\ Map\ Blend\ Duration_height=416
 etbDialogElectronic\ Throttle\ Body_Y=139
 etbDialogElectronic\ Throttle\ Body_X=563
 IgnitionTableDialogIgnition\ advance_X=683
@@ -104,6 +111,7 @@ cltIdleTableIdle\ position\ by\ Engine\ Temperature_X=812
 projectName=Peugeot206
 tpsSensorTPS_height=891
 multisparkSettingsMultispark_height=401
+predictiveMapBlendDurationPredictive\ Map\ Blend\ Duration_width=422
 ignitionSettingsIgnition\ settings_width=862
 multisparkSettingsMultispark_width=482
 idleTimingPidCorrDialogClosed-loop\ idle\ timing_height=428
@@ -122,6 +130,7 @@ canReWidebandToolsrusEFI\ Wideband\ Tools_X=718
 tuneFileDir=/home/fdsoftware/TunerStudioProjects/Peugeot206
 canReWidebandToolsrusEFI\ Wideband\ Tools_Y=102
 coastingFuelCutControlCoasting\ Fuel\ Cutoff\ Settings_height=453
+tChargeSettingsEstimated\ cylinder\ air\ temperature_width=623
 vrThresholdSettings_height=343
 idleTimingPidCorrDialogClosed-loop\ idle\ timing_X=377
 idleTimingPidCorrDialogClosed-loop\ idle\ timing_Y=167
@@ -131,14 +140,15 @@ etbDialogElectronic\ Throttle\ Body_height=771
 dwellSettingsDwell_width=623
 pedalSensorAccelerator\ pedal_Y=96
 pedalSensorAccelerator\ pedal_X=996
-idleSettingsIdle\ settings_X=238
+idleSettingsIdle\ settings_X=813
 triggerConfigurationTrigger_height=606
 crankingTpsCurveCranking\ TPS\ Multiplier_height=452
-idleSettingsIdle\ settings_Y=35
+idleSettingsIdle\ settings_Y=15
 CommSettingDESKTOP-1J48FJ4CommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 tpsSensorTPS_width=556
 ecuStimulatorECU\ stimulator_Y=213
 speedSensorSpeed\ sensor_X=478
+tChargeSettingsEstimated\ cylinder\ air\ temperature_height=963
 ecuStimulatorECU\ stimulator_X=635
 speedSensorSpeed\ sensor_Y=288
 dcMotorActuatorFunctionDC\ motor\ actuator(s)\ function_width=307
@@ -160,6 +170,7 @@ crankingDialogCranking\ Settings_height=466
 useCommonTuneViewDir=false
 AccelEnrichAccel/Decel\ Enrichment_height=531
 triggerConfigurationTrigger_Y=221
+smLaunchControlLaunch\ Control_width=597
 ecuUid=c043081c-c3a4-485c-850f-8222df09bf2e
 ignitionCltCorrTableWarmup\ timing\ correction_height=261
 triggerConfigurationTrigger_X=349
@@ -172,22 +183,27 @@ idleAdvanceCurve_showText=true
 speedSensorSpeed\ sensor_height=472
 multisparkSettingsMultispark_Y=324
 multisparkSettingsMultispark_X=719
-CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
+CommSettingdiego-pcCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM1
 cltIdleRPMCurveIdle\ Target\ RPM_width=610
+monitoringSettingsrusEFI\ Console\ Settings_width=296
 acSettingsAir\ Conditioning_width=693
 baroSettingsBaro\ sensor_height=347
 connectionConnection_height=275
 fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_Y=127
 fuelClosedLoopDialogShort\ term\ fuel\ trim/Closed\ loop_X=400
 cltIdleTableIdle\ position\ by\ Engine\ Temperature_width=629
-lastDisplayedTuneFile=Modified - TU5JP 1.6 8v_generated_20251003224320.msq
+monitoringSettingsrusEFI\ Console\ Settings_height=180
+baroCorrTblBaro\ Correction_height=245
+lastDisplayedTuneFile=
 ignitionSettingsIgnition\ settings_height=507
 crankingDialogCranking\ Settings_width=412
 injectorConfigInjection\ configuration_width=439
 injectionSettingsInjection\ hardware_width=631
 idlehwIdle\ hardware_width=584
 baroSettingsBaro\ sensor_X=806
+predictiveMapBlendDurationPredictive\ Map\ Blend\ Duration_Y=316
 baroSettingsBaro\ sensor_Y=351
+predictiveMapBlendDurationPredictive\ Map\ Blend\ Duration_X=749
 limitsAndFallbackLimits\ and\ fallbacks_X=526
 limitsAndFallbackLimits\ and\ fallbacks_Y=214
 useCommonDashboardDir=false
@@ -201,7 +217,9 @@ CommSettingdiego-pcCommDriver.controllerInterfaceId=RS232 Serial Interface
 cltIdleRPMCurveIdle\ Target\ RPM_height=581
 rainEtbAdjustmentDialogRain\ Mode\ Just\ An\ Example_width=276
 primingFuelPulsePanelPriming\ fuel\ pulse_Y=273
+baroCorrTblBaro\ Correction_Y=402
 primingFuelPulsePanelPriming\ fuel\ pulse_X=646
+baroCorrTblBaro\ Correction_X=822
 ecuSettings=AFR|
 energySystemsBattery\ and\ Alternator\ Settings_X=582
 energySystemsBattery\ and\ Alternator\ Settings_Y=252
@@ -228,7 +246,7 @@ vrThresholdSettings_width=374
 otherSensorInputsOther\ Sensor\ Inputs_X=701
 ioTestBench\ Test\ &\ Commands_height=662
 CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
-firmwareDescription=rusEFI v20251003@1431655765
+firmwareDescription=rusEFI v20251008@1161449280
 CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
 sdCardSD\ Card_width=364
 ignitionInputDialogIgnition\ key\ input\ Settings_height=168
@@ -238,6 +256,8 @@ analogInputSettingsAnalog\ Input\ Settings_height=200
 allPins1All\ IO\ 1/3_height=661
 idleTimingPidCorrDialogClosed-loop\ idle\ timing_width=396
 acSettingsAir\ Conditioning_X=403
+smLaunchControlLaunch\ Control_Y=184
+smLaunchControlLaunch\ Control_X=661
 acSettingsAir\ Conditioning_Y=242
 ignitionInputDialogIgnition\ key\ input\ Settings_width=363
 stagedInjectionStaged\ injection_X=715
